minor fix (FX Index settlement)

--- a/QuantExt/test/testsuite.vcxproj
+++ b/QuantExt/test/testsuite.vcxproj
@@ -644,6 +644,8 @@
     <ClCompile Include="crossassetmodel.cpp" />
     <ClCompile Include="crossassetmodel2.cpp" />
     <ClCompile Include="crossassetmodelparametrizations.cpp" />
+    <ClCompile Include="crossccybasismtmresetswap.cpp" />
+    <ClCompile Include="crossccybasismtmresetswaphelper.cpp" />
     <ClCompile Include="crossccyfixfloatswap.cpp" />
     <ClCompile Include="crossccyfixfloatswaphelper.cpp" />
     <ClCompile Include="currency.cpp" />
@@ -681,6 +683,8 @@
     <ClInclude Include="crossassetmodel.hpp" />
     <ClInclude Include="crossassetmodel2.hpp" />
     <ClInclude Include="crossassetmodelparametrizations.hpp" />
+    <ClInclude Include="crossccybasismtmresetswap.hpp" />
+    <ClInclude Include="crossccybasismtmresetswaphelper.hpp" />
     <ClInclude Include="crossccyfixfloatswaphelper.hpp" />
     <ClInclude Include="crossccyfixfloatswap.hpp" />
     <ClInclude Include="currency.hpp" />
