--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -101,6 +101,12 @@
     <ClCompile Include="crossccyfixfloatswaphelper.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="crossccybasismtmresetswaphelper.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="crossccybasismtmresetswap.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
@@ -217,6 +223,12 @@
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="crossccyfixfloatswaphelper.hpp">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="crossccybasismtmresetswaphelper.hpp">
+      <Filter>headers</Filter>
+    </ClInclude>
+    <ClInclude Include="crossccybasismtmresetswap.hpp">
       <Filter>headers</Filter>
     </ClInclude>
   </ItemGroup>
