added discountcommodityforwardengine test

--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -6,6 +6,7 @@ currency.cpp
 deltagammavar.cpp
 deposit.cpp
 discountcurve.cpp
+discountingcommodityforwardengine.cpp
 index.cpp
 logquote.cpp
 payment.cpp
