added most remaining tests for QuantExt

--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -1,9 +1,13 @@
 # cpp files, this list is maintained manually
 
-set(QuantExt-Test_SRC blackvariancecurve.cpp
+set(QuantExt-Test_SRC analyticlgmswaptionengine.cpp 
+blackvariancecurve.cpp
 bonds.cpp
 cashflow.cpp
 commodityforward.cpp
+crossassetmodel.cpp
+crossassetmodel2.cpp 
+crossassetmodelparametrizations.cpp
 crossccyfixfloatswap.cpp 
 currency.cpp
 deltagammavar.cpp
@@ -17,13 +21,16 @@ fxvolsmile.cpp
 index.cpp
 interpolatedyoycapfloortermpricesurface.cpp 
 logquote.cpp
+optionletstripper.cpp
 payment.cpp
 pricecurve.cpp
 pricetermstructureadapter.cpp
 qle_calendars.cpp
 ratehelpers.cpp
+stabilisedglls.cpp
 staticallycorrectedyieldtermstructure.cpp 
 survivalprobabilitycurve.cpp 
+swaptionvolatilityconverter.cpp
 swaptionvolconstantspread.cpp
 testsuite.cpp)
 
