--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -9,6 +9,7 @@ crossassetmodel.cpp
 crossassetmodel2.cpp 
 crossassetmodelparametrizations.cpp
 crossccyfixfloatswap.cpp 
+crossccyfixfloatswaphelper.cpp
 currency.cpp
 deltagammavar.cpp
 deposit.cpp
