Add a probability traits class for QuantExt
This is a copy of the corresponding class in QuantLib so that we can
manage the bootstrap parameters without changing QuantLib. Here, we were
getting lots of bootstrap failures for legitimate CDS curves because the
maximum hazard rate of 1 was too low.

--- a/QuantExt/QuantExt.vcxproj
+++ b/QuantExt/QuantExt.vcxproj
@@ -669,6 +669,7 @@
     <ClInclude Include="qle\termstructures\optionletstripper2.hpp" />
     <ClInclude Include="qle\termstructures\pricetermstructureadapter.hpp" />
     <ClInclude Include="qle\termstructures\pricetermstructure.hpp" />
+    <ClInclude Include="qle\termstructures\probabilitytraits.hpp" />
     <ClInclude Include="qle\termstructures\spreadedoptionletvolatility.hpp" />
     <ClInclude Include="qle\termstructures\spreadedsmilesection.hpp" />
     <ClInclude Include="qle\termstructures\spreadedswaptionvolatility.hpp" />
