--- a/QuantExt/qle/termstructures/Makefile.am
+++ b/QuantExt/qle/termstructures/Makefile.am
@@ -101,7 +101,7 @@ this_include_HEADERS = \
     yoyinflationoptionletvolstripper.hpp \
 	discountratiomodifiedcurve.hpp \
 	crossccyfixfloatswaphelper.hpp \
-	capfloortermvolsurface.cpp \
+	capfloortermvolsurface.hpp \
 	probabilitytraits.hpp
 
 all.hpp: Makefile.am
