--- a/QuantExt/qle/quotes/Makefile.am
+++ b/QuantExt/qle/quotes/Makefile.am
@@ -4,7 +4,8 @@ AM_CPPFLAGS = -I${top_srcdir} -I${top_builddir}
 this_includedir=${includedir}/${subdir}
 this_include_HEADERS = \
     all.hpp \
-    logquote.hpp
+    logquote.hpp \
+    exceptionquote.hpp
 
 libQuotes_la_SOURCES = \
 	logquote.cpp
