--- a/OREData/ored/marketdata/Makefile.am
+++ b/OREData/ored/marketdata/Makefile.am
@@ -9,6 +9,7 @@ libOREDataMarketData_la_LIBADD =
 libOREDataMarketData_la_SOURCES = \
 	capfloorvolcurve.cpp \
     cdsvolcurve.cpp \
+	cpr.cpp \
 	csvloader.cpp \
 	curveloader.cpp \
 	curvespec.cpp \
@@ -42,6 +43,7 @@ this_include_HEADERS = \
 	all.hpp \
 	capfloorvolcurve.hpp \
     cdsvolcurve.hpp \
+	cpr.hpp \
 	csvloader.hpp \
 	curveloader.hpp \
 	curvespec.hpp \
