--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -733,7 +733,7 @@
     </ClCompile>
     <ClCompile Include="ored\portfolio\bondoption.cpp">
       <Filter>portfolio</Filter>
-    </ClInclude>
+    </ClCompile>
     <ClCompile Include="ored\marketdata\inmemoryloader.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
