--- a/App/ore.vcxproj
+++ b/App/ore.vcxproj
@@ -182,7 +182,7 @@
       <PrecompiledHeaderOutputFile />
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
       <MinimalRebuild>false</MinimalRebuild>
-      <AdditionalOptions>/MP /bigobj %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP /bigobj $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)\%(RelativeDir)</AssemblerListingLocation>
       <ObjectFileName>$(IntDir)\%(RelativeDir)</ObjectFileName>
     </ClCompile>
@@ -208,7 +208,7 @@
       </PrecompiledHeaderOutputFile>
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
       <MinimalRebuild>false</MinimalRebuild>
-      <AdditionalOptions>/MP /bigobj %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP /bigobj $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <AssemblerListingLocation>$(IntDir)\%(RelativeDir)</AssemblerListingLocation>
       <ObjectFileName>$(IntDir)\%(RelativeDir)</ObjectFileName>
@@ -233,7 +233,7 @@
       <PrecompiledHeaderOutputFile />
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
       <MinimalRebuild>false</MinimalRebuild>
-      <AdditionalOptions>/MP /bigobj %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP /bigobj $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <AssemblerListingLocation>$(IntDir)\%(RelativeDir)</AssemblerListingLocation>
       <ObjectFileName>$(IntDir)\%(RelativeDir)</ObjectFileName>
     </ClCompile>
@@ -259,7 +259,7 @@
       </PrecompiledHeaderOutputFile>
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
       <MinimalRebuild>false</MinimalRebuild>
-      <AdditionalOptions>/MP /bigobj %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP /bigobj $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <AssemblerListingLocation>$(IntDir)\%(RelativeDir)</AssemblerListingLocation>
       <ObjectFileName>$(IntDir)\%(RelativeDir)</ObjectFileName>
@@ -285,7 +285,7 @@
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
-      <AdditionalOptions>/MP %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
@@ -319,7 +319,7 @@
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
-      <AdditionalOptions>/MP %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
@@ -351,7 +351,7 @@
       <PrecompiledHeaderFile />
       <PrecompiledHeaderOutputFile />
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
-      <AdditionalOptions>/MP %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
@@ -385,7 +385,7 @@
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
       <ProgramDataBaseFileName>$(IntDir)\%(RelativeDir)</ProgramDataBaseFileName>
-      <AdditionalOptions>/MP %(AdditionalOptions) $(additionalWarning)</AdditionalOptions>
+      <AdditionalOptions>/MP $(additionalWarning) %(AdditionalOptions)</AdditionalOptions>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
       <InlineFunctionExpansion>AnySuitable</InlineFunctionExpansion>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
