--- a/OREData/OREData.vcxproj
+++ b/OREData/OREData.vcxproj
@@ -108,6 +108,7 @@
     <ClInclude Include="ored\portfolio\builders\cmsspread.hpp" />
     <ClInclude Include="ored\portfolio\builders\commodityforward.hpp" />
     <ClInclude Include="ored\portfolio\builders\commodityoption.hpp" />
+    <ClInclude Include="ored\portfolio\builders\cpicapfloor.hpp" />
     <ClInclude Include="ored\portfolio\builders\creditdefaultswap.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityforward.hpp" />
     <ClInclude Include="ored\portfolio\builders\equityoption.hpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="ored\portfolio\capfloor.hpp" />
     <ClInclude Include="ored\portfolio\commodityforward.hpp" />
     <ClInclude Include="ored\portfolio\commodityoption.hpp" />
+    <ClInclude Include="ored\portfolio\cpicapfloor.hpp" />
     <ClInclude Include="ored\portfolio\creditdefaultswap.hpp" />
     <ClInclude Include="ored\portfolio\creditdefaultswapdata.hpp" />
     <ClInclude Include="ored\portfolio\enginedata.hpp" />
@@ -229,11 +231,13 @@
     <ClCompile Include="ored\portfolio\builders\cms.cpp" />
     <ClCompile Include="ored\portfolio\builders\cmsspread.cpp" />
     <ClCompile Include="ored\portfolio\builders\commodityoption.cpp" />
+    <ClCompile Include="ored\portfolio\builders\cpicapfloor.cpp" />
     <ClCompile Include="ored\portfolio\builders\swaption.cpp" />
     <ClCompile Include="ored\portfolio\builders\yoycapfloor.cpp" />
     <ClCompile Include="ored\portfolio\capfloor.cpp" />
     <ClCompile Include="ored\portfolio\commodityforward.cpp" />
     <ClCompile Include="ored\portfolio\commodityoption.cpp" />
+    <ClCompile Include="ored\portfolio\cpicapfloor.cpp" />
     <ClCompile Include="ored\portfolio\creditdefaultswap.cpp" />
     <ClCompile Include="ored\portfolio\creditdefaultswapdata.cpp" />
     <ClCompile Include="ored\portfolio\enginedata.cpp" />
