update xsd and testsuite for bondoption

--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -107,6 +107,9 @@
     <ClCompile Include="crossccybasismtmresetswap.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="bondoption.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
