add digital cms spread

--- a/OREData/test/Makefile.am
+++ b/OREData/test/Makefile.am
@@ -32,7 +32,8 @@ OREDATA_TESTS = \
 	cds.cpp \
 	inflationcapfloor.cpp \
 	equityswap.cpp \
-	conventions.cpp
+	conventions.cpp \
+    digitalcms.cpp
 
 dist-hook:
 	mkdir -p $(distdir)/build
