--- a/QuantExt/test/Makefile.am
+++ b/QuantExt/test/Makefile.am
@@ -29,6 +29,7 @@ QLE_TESTS = \
 	discountingcommodityforwardengine.cpp \
 	pricetermstructureadapter.cpp \
 	bonds.cpp \
+	bondoption.cpp \
 	interpolatedyoycapfloortermpricesurface.cpp \
 	qle_calendars.cpp \
 	discountratiomodifiedcurve.cpp \
