--- a/OREData/ored/portfolio/builders/Makefile.am
+++ b/OREData/ored/portfolio/builders/Makefile.am
@@ -20,6 +20,7 @@ this_includedir=${includedir}/${subdir}
 this_include_HEADERS = \
 	all.hpp \
 	bond.hpp \
+	bondoption.hpp \
 	cachingenginebuilder.hpp \
 	capfloor.hpp \
 	capfloorediborleg.hpp \
