--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -3,6 +3,7 @@
 set(QuantExt-Test_SRC analyticlgmswaptionengine.cpp 
 blackvariancecurve.cpp
 bonds.cpp
+bondoption.cpp
 cashflow.cpp
 commodityforward.cpp
 cpicapfloor.cpp
