--- a/QuantExt/qle/pricingengines/Makefile.am
+++ b/QuantExt/qle/pricingengines/Makefile.am
@@ -14,6 +14,7 @@ libPricingEngines_la_SOURCES = \
 	analyticlgmswaptionengine.cpp \
 	analyticdkcpicapfloorengine.cpp \
 	analyticlgmcdsoptionengine.cpp \
+	blackbondoptionengine.cpp \
 	crossccyswapengine.cpp \
 	depositengine.cpp \
 	discountingcurrencyswapengine.cpp \
@@ -38,6 +39,7 @@ this_include_HEADERS = \
 	analyticlgmswaptionengine.hpp \
 	analyticdkcpicapfloorengine.hpp \
 	analyticlgmcdsoptionengine.hpp \
+	blackbondoptionengine.hpp \
 	crossccyswapengine.hpp \
 	depositengine.hpp \
 	discountingcurrencyswapengine.hpp \
