--- a/OREAnalytics/orea/CMakeLists.txt
+++ b/OREAnalytics/orea/CMakeLists.txt
@@ -42,15 +42,14 @@ simulation/simmarket.cpp)
 
 # hpp files, this list is maintained manually
 
-set(OREAnalytics_HDR auto_link.hpp
-version.hpp
-aggregation/collateralaccount.hpp
+set(OREAnalytics_HDR aggregation/collateralaccount.hpp
 aggregation/collatexposurehelper.hpp
 aggregation/postprocess.hpp
 app/oreapp.hpp
 app/parameters.hpp
 app/reportwriter.hpp
 app/sensitivityrunner.hpp
+auto_link.hpp
 cube/cubewriter.hpp
 cube/inmemorycube.hpp
 cube/npvcube.hpp
@@ -92,7 +91,8 @@ scenario/stressscenariodata.hpp
 scenario/stressscenariogenerator.hpp
 simulation/dategrid.hpp
 simulation/fixingmanager.hpp
-simulation/simmarket.hpp)
+simulation/simmarket.hpp
+version.hpp)
 
 writeAll("orea" "orea.hpp" "auto_link.hpp" "${OREAnalytics_HDR}")
 add_library(${OREA_LIB_NAME} ${OREAnalytics_SRC})
